syntax = "proto3";
package agent;

service Router {
  rpc Ping (PingRequest) returns (AgentResponse);
  rpc Send (RouterRequest) returns (AgentResponse);
}

message PingRequest {
  string body = 1;
}

message RouterRequest {
  string action = 1;
  string body = 2;
}

message AgentResponse {
  bool success = 1;
  string body = 2;
}